[package]
name = "random-imgur"
version = "0.1.0"
authors = ["Mike <michaelpulliam1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
rand = "0.7"
image = "0.23"
sdl2 = "0.34"
