[package]
name = "random-imgur"
version = "0.1.1"
authors = ["Mike <michaelpulliam1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
rand = "0.8"
image = "0.24"
sdl2 = "0.35"
